fix: issue where contact message textarea did not align with the input widths

--- a/src/sections/ContactSection/ContactSection.scss
+++ b/src/sections/ContactSection/ContactSection.scss
@@ -40,7 +40,7 @@
 
     textarea {
       min-height: 4rem;
-      max-width: calc(100% - 1rem - 4px);
+      max-width: calc(100%);
       field-sizing: content;
     }
 
